[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ['derive'] }
fslock = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
#local pkgs
algod_config = { package = "config", path = '../config' }
daemon = { path = '../daemon' }
data = { path = '../data' }
protocol = { path = '../protocol' }
node = { path = "../node" }
