[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_repr = "0.1"
protocol = { path = "../protocol" }
