[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
digest = { version = "0.10.3" }
ed25519 = "1.5.2"
sha2 = { version = "0.10.2" }
libsodium-sys-stable = { version = "1.19.22", features = ["minimal"] }
dryoc = "0.3.12"
msgp =  {path = "../msgp"}
protocol = {path="../protocol"}
