[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
crypto = { path = '../crypto' }
protocol = { path = '../protocol' }
