[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base32 = "0.4.0"
base64 = "0.13.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
rmp = "^0.8"
rmp-serde = "1.1.0"
hex = "0.4.3"
config = { path = '../config' }
crypto = { path = '../crypto' }
ledger = { path = '../ledger' }
msgp = {path = '../msgp'}
protocol = { path = '../protocol' }
util = {path='../util'}
