[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10.3" }
sha2 = { version = "0.10.2" }
config = { path = '../config' }
crypto = { path = '../crypto' }
data = { path = '../data' }
util = { path = '../util' }
