[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
futures = { version = "0.3.21" }
tracing = "0.1"
tracing-subscriber = "0.3"
