[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.21" }
num_cpus = "1.13.1"
parking_lot = "0.12"
pin-project = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
tokio-util = { version = "0.7.3" }
tracing = "0.1"
tracing-subscriber = "0.3"
